--- a/src/sass/slider.sass
+++ b/src/sass/slider.sass
@@ -1,13 +1,30 @@
 body,html
     margin: 0
     padding: 0
+    overflow-x: hidden
 .landing
-    border: 1px pink solid
     height: 100vh
     display: flex
     flex-direction: column
     .slider
+        position: relative
         flex: 1
+        .nav
+            z-index: 1
+            position: absolute
+            right: 3%
+            top: 3%
+            a
+                color: white
+                text-decoration: none
+                text-transform: uppercase
+                margin-left: 10px
+                font-family: "Work Sans"
+                font-weight: 800
+                line-height: 60%
+                letter-spacing: 1.5px
+                &:hover
+                    text-decoration: underline
         ul
             width: 100%
             padding: 0
@@ -33,3 +50,16 @@ body,html
         height: 10vh
         background-color: blue
         opacity: 0.7
+        display: flex
+        button
+            display: block
+            background-image: url(../images/arrows.png)
+            width: 64px
+            height: 64px
+            background-size: contain
+            margin: auto auto
+            background-color: transparent
+            border: none
+            cursor: pointer
+            &:focus
+                outline: none
