--- a/src/sass/navigation.sass
+++ b/src/sass/navigation.sass
@@ -15,8 +15,10 @@
         font-weight: 800
         text-transform: uppercase
         letter-spacing: 1px
-        color: #545F66 //cyan
+        color: #545F66 // grey
         font-size: 110%
-
-.clicked
-    border-bottom: 5px solid #18DCE2 // grey
+        &:focus
+            outline: none
+.clicked 
+    border: none
+    border-bottom: 5px solid #18DCE2 !important
