--- a/src/sass/slider.sass
+++ b/src/sass/slider.sass
@@ -36,20 +36,19 @@ body,html
                 height: 100%
                 width: 100vw
                 display: inline-block
-            &:nth-child(1)
-                background-color: red
-            &:nth-child(2)
-                background-color: blue
-            &:nth-child(3)
-                background-color: green
-            &:nth-child(4)
-                background-color: yellow
-            &:nth-child(5)
-                background-color: purple
+                &:nth-of-type(1)
+                    background-color: red
+                &:nth-of-type(2)
+                    background-color: blue
+                &:nth-of-type(3)
+                    background-color: green
+                &:nth-of-type(4)
+                    background-color: yellow
+                &:nth-of-type(5)
+                    background-color: purple
     .godown
         height: 10vh
-        background-color: blue
-        opacity: 0.7
+        background-color: #545F66
         display: flex
         button
             display: block
