--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -37,20 +37,19 @@ body, html {
         height: 100%;
         width: 100vw;
         display: inline-block; }
-      .landing .slider ul:nth-child(1) {
-        background-color: red; }
-      .landing .slider ul:nth-child(2) {
-        background-color: blue; }
-      .landing .slider ul:nth-child(3) {
-        background-color: green; }
-      .landing .slider ul:nth-child(4) {
-        background-color: yellow; }
-      .landing .slider ul:nth-child(5) {
-        background-color: purple; }
+        .landing .slider ul li:nth-of-type(1) {
+          background-color: red; }
+        .landing .slider ul li:nth-of-type(2) {
+          background-color: blue; }
+        .landing .slider ul li:nth-of-type(3) {
+          background-color: green; }
+        .landing .slider ul li:nth-of-type(4) {
+          background-color: yellow; }
+        .landing .slider ul li:nth-of-type(5) {
+          background-color: purple; }
   .landing .godown {
     height: 10vh;
-    background-color: blue;
-    opacity: 0.7;
+    background-color: #545F66;
     display: flex; }
     .landing .godown button {
       display: block;
