--- a/src/css/presentation.css
+++ b/src/css/presentation.css
@@ -1,13 +1,67 @@
 .presentation {
   height: 100vh; }
   .presentation .cover {
-    height: 60%;
-    background-color: red; }
+    height: 60%; }
+    .presentation .cover ul {
+      margin: 0;
+      position: relative;
+      height: 100%;
+      list-style-type: none; }
+      .presentation .cover ul li {
+        top: 0;
+        left: 0;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute; }
+        .presentation .cover ul li:nth-of-type(1) {
+          background-color: green; }
+        .presentation .cover ul li:nth-of-type(2) {
+          background-color: blue; }
+        .presentation .cover ul li:nth-of-type(3) {
+          background-color: red; }
+        .presentation .cover ul li:nth-of-type(4) {
+          background-color: purple; }
   .presentation .gallery {
     display: flex;
     flex-wrap: wrap;
     height: 40%; }
     .presentation .gallery .item {
+      padding: 0;
+      outline: none;
+      border: none;
       background-color: #545F66;
       height: 50%;
       width: 20%; }
+    .presentation .gallery button:nth-of-type(1) {
+      background-color: green; }
+    .presentation .gallery button:nth-of-type(2) {
+      background-color: blue; }
+    .presentation .gallery button:nth-of-type(3) {
+      background-color: red; }
+    .presentation .gallery button:nth-of-type(4) {
+      background-color: purple; }
+    .presentation .gallery a {
+      background-color: #333 !important;
+      text-decoration: none; }
+      .presentation .gallery a .galerija {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        align-items: center; }
+        .presentation .gallery a .galerija h2 {
+          margin: 3px;
+          line-height: 100%;
+          letter-spacing: 2px;
+          color: white;
+          font-family: "Work Sans";
+          text-transform: uppercase; }
+        .presentation .gallery a .galerija img {
+          margin-bottom: 0;
+          width: 30%;
+          height: 30%; }
+
+.hidden {
+  display: none; }
