--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -1,7 +1,8 @@
 body, html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background-color: #DADADA; }
 
 .landing {
   height: 100vh;
@@ -35,7 +36,7 @@ body, html {
       .landing .slider ul li {
         position: absolute;
         height: 100%;
-        width: 100vw;
+        width: 100%;
         display: inline-block; }
         .landing .slider ul li:nth-of-type(1) {
           background-color: red; }
