--- a/src/sass/presentation.sass
+++ b/src/sass/presentation.sass
@@ -2,12 +2,67 @@
     height: 100vh
     .cover
         height: 60%
-        background-color: red
+        ul
+            margin: 0
+            position: relative
+            height: 100%
+            list-style-type: none
+            li
+                top: 0
+                left: 0
+                padding: 0
+                margin: 0
+                height: 100%
+                width: 100%
+                position: absolute
+                &:nth-of-type(1)
+                    background-color: green
+                &:nth-of-type(2)
+                    background-color: blue
+                &:nth-of-type(3)
+                    background-color: red
+                &:nth-of-type(4)
+                    background-color: purple
+
     .gallery
         display: flex
         flex-wrap: wrap
         height: 40%
         .item
+            padding: 0
+            outline: none
+            border: none
             background-color: #545F66
             height: 50%
             width: 20%
+        button
+            &:nth-of-type(1)
+                background-color: green
+            &:nth-of-type(2)
+                background-color: blue
+            &:nth-of-type(3)
+                background-color: red
+            &:nth-of-type(4)
+                background-color: purple
+        a
+            background-color: #333 !important
+            text-decoration: none
+            .galerija
+                display: flex
+                flex-direction: column
+                height: 100%
+                justify-content: center
+                align-items: center
+                h2
+                    margin: 3px
+                    line-height: 100%
+                    letter-spacing: 2px
+                    color: white
+                    font-family: "Work Sans"
+                    text-transform: uppercase
+                img
+                    margin-bottom: 0
+                    width: 30%
+                    height: 30%
+.hidden
+    display: none
