--- a/src/sass/slider.sass
+++ b/src/sass/slider.sass
@@ -2,6 +2,7 @@ body,html
     margin: 0
     padding: 0
     overflow-x: hidden
+    background-color: #DADADA
 .landing
     height: 100vh
     display: flex
@@ -34,7 +35,7 @@ body,html
             li
                 position: absolute
                 height: 100%
-                width: 100vw
+                width: 100%
                 display: inline-block
                 &:nth-of-type(1)
                     background-color: red
