--- a/src/sass/slider.sass
+++ b/src/sass/slider.sass
@@ -15,7 +15,9 @@ body,html
             position: absolute
             right: 3%
             top: 3%
-            a
+            a, button
+                border: none
+                background-color: Transparent
                 color: white
                 text-decoration: none
                 text-transform: uppercase
@@ -24,8 +26,11 @@ body,html
                 font-weight: 800
                 line-height: 60%
                 letter-spacing: 1.5px
+                font-size: 100%
                 &:hover
                     text-decoration: underline
+            button:focus
+                outline: none
         ul
             width: 100%
             padding: 0
@@ -37,16 +42,23 @@ body,html
                 height: 100%
                 width: 100%
                 display: inline-block
+                background-size: 100% 100%
                 &:nth-of-type(1)
-                    background-color: red
+                    background-image: url(../images/slider/1.jpg)
                 &:nth-of-type(2)
-                    background-color: blue
+                    background-image: url(../images/slider/2.jpg)
                 &:nth-of-type(3)
-                    background-color: green
+                    background-image: url(../images/slider/3.jpg)
                 &:nth-of-type(4)
-                    background-color: yellow
+                    background-image: url(../images/slider/4.jpg)
                 &:nth-of-type(5)
-                    background-color: purple
+                    background-image: url(../images/slider/5.jpg)
+                &:nth-of-type(6)
+                    background-image: url(../images/slider/6.jpg)
+                &:nth-of-type(7)
+                    background-image: url(../images/slider/7.jpg)
+                &:nth-of-type(8)
+                    background-image: url(../images/slider/8.jpg)
     .godown
         height: 10vh
         background-color: #545F66
