Finished parallax for gallery page and some groundwork

--- a/src/gallery/index.pug
+++ b/src/gallery/index.pug
@@ -6,45 +6,58 @@ html
 		.navigation
 		.section#etnomodeli
 			.cover
-				h1 Etno Modeli
+				h1 Etno Motivi
 			.gallery
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
-				.item
-					img(src="")
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+		.section#planine
+			.cover
+				h1 Planine i Banje
+			.gallery
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+		.section#morski
+			.cover
+				h1 Morski Motivi
+			.gallery
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
+				img(src='').item
